feat: implement Avro support for EBike updates in Kafka consumers